--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
     ext.kotlin_version = '1.3.72'
     ext.lifecycle_version = '2.2.0'
     ext.room_version = '2.2.5'
+    ext.retrofit_version = '2.8.1'
+    ext.glide_version = '4.11.0'
     repositories {
         google()
         jcenter()
