--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext.room_version = '2.2.5'
     ext.retrofit_version = '2.8.1'
     ext.glide_version = '4.11.0'
+    ext.navigation_version = '2.2.2'
     repositories {
         google()
         jcenter()
