--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ylallencheng.fakepodcast">
 
+    <!-- Permission Internet -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name=".FPApplication"
         android:allowBackup="true"
@@ -11,14 +15,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".ui.player.PlayerActivity">
+
+        <activity android:name=".ui.podcast.PodcastActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.podcast.PodcastActivity" />
+        <activity android:name=".ui.player.PlayerActivity" />
     </application>
 
 </manifest>
