--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </activity>
 
         <activity android:name=".ui.player.PlayerActivity" />
-    </application>
 
+        <service android:name=".service.PlayerService" />
+    </application>
 </manifest>
